# script_identification

./: .gitignore  CMakeLists.txt  README.md  babel_ClassifyAllScripts.cpp  babel_ClassifyAllScriptsWeighted.cpp  cvsi_ClassifyAllScripts.cpp  cvsi_ClassifyAllScriptsWeighted.cpp  mle2e_ClassifyAllScripts.cpp  utils.h
ECN/: README.md
ECN/caffe_models/siw13_ECNx10_5_3_3_1/: image_mean.binaryproto  solver.prototxt  train_val.prototxt
ECN/caffe_models/siw13_simple_5_3_3_1/: deploy.prototxt  image_mean.binaryproto  labels.txt  solver.prototxt  train_val.prototxt
ECN/data/: README.txt
ECN/data/orig/: README.txt
ECN/scripts/: extract_test_patches.py  extract_train_patches.py  extract_train_patches_ECN.py
ECN/tools/: CMakeLists.txt  compute_image_mean_ECN.cpp  convert_imageset_ECN.cpp  eval_siw13.cpp
UFL/: CMakeLists.txt  README.md  cvsi_ClassifyAllScripts.cpp
UFL/train/: CMakeLists.txt  extract_features.cpp  first_layer_filters.xml
train/: README.md  extract_features.cpp  extract_filters.cpp  show_filters.cpp
